# wattage

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  WATTAGE_BUILD_DOC.md  mkdocs.yml  pyproject.toml
action/: action.yml  entrypoint.sh
benchmarks/: adversarial_fixtures.py  baseline_sha256.py  frontier.py  harness.py  verify_fixtures.py
benchmarks/traces/: README.md  any_agent_openai.otlp.json  convert_any_agent_trace.py
docs/: adapters.md  ci.md  convergence.md  index.md
docs/detectors/: cache_gap.md  index.md  model_mismatch.md  prefix_churn.md  reasoning_overspend.md  redundant_tool_calls.md  retrieval_thrash.md  verbosity.md
examples/: sample_report.golden.txt  sample_trace.json
npm/: package.json
src/wattage/: baseline.py  ci.py  cli.py  config.py  models.py  normalize.py  report.py  sessionize.py
src/wattage/adapters/: base.py  otlp_file.py
src/wattage/convergence/: classify.py  embed.py  judge.py  signals.py
src/wattage/detectors/: base.py  cache_gap.py  convergence.py  model_mismatch.py  prefix_churn.py  reasoning_overspend.py  redundant_tool_calls.py  retrieval_thrash.py  verbosity.py
src/wattage/pricing/: engine.py  registry.py
src/wattage/pricing/data/: pricing.yaml
src/wattage/render/: badge.py  json_report.py  junit.py  pr_comment.py  sarif.py  terminal.py
src/wattage/render/html/: __init__.py  tree.py
src/wattage/scoring/: quality.py  score.py
tests/: test_action.py  test_adapters_otlp_file.py  test_adversarial_fixtures.py  test_baseline.py  test_baseline_sha256.py  test_ci.py  test_cli.py  test_convergence_classify.py  test_convergence_embed.py  test_convergence_judge.py  test_convergence_signals.py  test_detector_cache_gap.py  test_detector_convergence.py  test_detector_model_mismatch.py  test_detector_prefix_churn.py  test_detector_reasoning_overspend.py  test_detector_redundant_tool_calls.py  test_detector_retrieval_thrash.py  test_detector_verbosity.py  test_frontier.py  test_harness.py  test_models.py  test_npm_shim.py  test_pricing_engine.py  test_real_trace_any_agent.py  test_render_badge.py  test_render_html.py  test_render_html_tree.py  test_render_junit.py  test_render_pr_comment.py  test_render_sarif.py  test_report_integration.py  test_scoring.py  test_scoring_quality.py  test_sessionize.py
