[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wattage"
version = "0.1.0"
description = "A token-spend profiler and cost-regression gate for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Faizan Raza" }]
keywords = ["llm", "agents", "opentelemetry", "observability", "cost", "tokens"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "numpy>=1.26",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0"]
judge = ["anthropic>=0.30"]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-golden>=0.2",
  "hypothesis>=6.100",
  "types-pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/muhammadfaizanraza/wattage"
Repository = "https://github.com/muhammadfaizanraza/wattage"

[project.scripts]
wattage = "wattage.cli:app"

[project.entry-points."wattage.detectors"]
prefix_churn = "wattage.detectors.prefix_churn:PrefixChurnDetector"
cache_gap = "wattage.detectors.cache_gap:CacheGapDetector"
verbosity = "wattage.detectors.verbosity:VerbosityDetector"
redundant_tool_calls = "wattage.detectors.redundant_tool_calls:RedundantToolCallsDetector"

[tool.hatch.build.targets.wheel]
packages = ["src/wattage"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["wattage"]
mypy_path = "src"
strict = true
disallow_untyped_defs = true

# numpy's bundled stubs use PEP 695 syntax (3.12+), newer than our python_version
# target; we don't use numpy yet (reserved for Phase 2's convergence math), so skip
# following it rather than lowering our own code's target-version bar.
[[tool.mypy.overrides]]
module = "numpy.*"
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
enable_assertion_pass_hook = true
